# cmc

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  block_outline.wgsl  build.sh  chunk.c  chunk.h  custommc.sh  dev-setup.sh  entity.wgsl  extractPacketIDs.js  framework.c  framework.h  import-data.sh  main.c  shader.wgsl  sky.wgsl
mcclient/: .gitignore  main.c  mcapi.c  mcapi.h
src/: chunk.c  chunk.h  datatypes.c  datatypes.h  entity.c  entity.h  framework.c  framework.h  game.h  logging.c  logging.h  macros.h  main.c  mcapi.c  mcapi.h  models.c  models.h  nbt.c  nbt.h  packetTypes.h  protocol.c  protocol.h  sockets.h  texture_sheet.c  texture_sheet.h  world.c  world.h
src/mcapi/: base.c  base.h  chunk.c  chunk.h  config.c  config.h  entity.c  entity.h  internal.c  internal.h  login.c  login.h  mcapi.h  misc.c  misc.h  packetTypes.h  player.c  player.h  protocol.c  protocol.h  sockets.h
